--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="GIMS Bioincubator - Where Ideas Transform into Impact" />
     <meta property="og:description" content="Nurturing breakthrough biotechnology startups with world-class facilities, expert mentorship, and collaborative ecosystem." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@GIMS_CMI" />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
