--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
     <title>GIMS Bioincubator - Pioneering Biotech Innovation</title>
     <meta name="description" content="GIMS Bioincubator empowers biotech entrepreneurs with world-class facilities, expert mentorship, and collaborative ecosystem to transform breakthrough research into impactful solutions." />
     <meta name="keywords" content="bioincubator, biotechnology, startup incubator, research facilities, GIMS, life sciences, innovation" />
